// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReviewPatchSet.js Should display all Patch Template configuration 1`] = `
<ReviewPatchSet>
  <Stack
    hasGutter={true}
  >
    <div
      className="pf-l-stack pf-m-gutter"
    >
      <StackItem>
        <div
          className="pf-l-stack__item"
        >
          <TextContent
            style={
              Object {
                "marginTop": "-15px",
              }
            }
          >
            <div
              className="pf-c-content"
              style={
                Object {
                  "marginTop": "-15px",
                }
              }
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-ouia-component-id="OUIA-Generated-Text-1"
                  data-ouia-component-type="PF4/Text"
                  data-ouia-safe={true}
                  data-pf-content={true}
                >
                  Review the information and click 
                  <b
                    key=".1"
                  >
                    Finish
                  </b>
                   to create a template.
                </p>
              </Text>
            </div>
          </TextContent>
        </div>
      </StackItem>
      <StackItem>
        <div
          className="pf-l-stack__item"
        >
          <TextContent>
            <div
              className="pf-c-content"
            >
              <Text
                className="pf-u-mt-md pf-u-mb-sm"
                component="h2"
              >
                <h2
                  className="pf-u-mt-md pf-u-mb-sm"
                  data-ouia-component-id="OUIA-Generated-Text-2"
                  data-ouia-component-type="PF4/Text"
                  data-ouia-safe={true}
                  data-pf-content={true}
                >
                  Template content
                </h2>
              </Text>
              <TextList
                component="dl"
              >
                <dl
                  className=""
                >
                  <TextListItem
                    component="dt"
                    style={
                      Object {
                        "minWidth": 220,
                      }
                    }
                  >
                    <dt
                      className=""
                      style={
                        Object {
                          "minWidth": 220,
                        }
                      }
                    >
                      Red Hat advisories up to date
                    </dt>
                  </TextListItem>
                  <TextListItem
                    component="dd"
                  >
                    <dd
                      className=""
                    >
                      14 June 2022
                    </dd>
                  </TextListItem>
                </dl>
              </TextList>
            </div>
          </TextContent>
        </div>
      </StackItem>
      <StackItem>
        <div
          className="pf-l-stack__item"
        >
          <TextContent>
            <div
              className="pf-c-content"
            >
              <Text
                className="pf-u-mt-md pf-u-mb-sm"
                component="h2"
              >
                <h2
                  className="pf-u-mt-md pf-u-mb-sm"
                  data-ouia-component-id="OUIA-Generated-Text-3"
                  data-ouia-component-type="PF4/Text"
                  data-ouia-safe={true}
                  data-pf-content={true}
                >
                  Template details
                </h2>
              </Text>
              <TextList
                component="dl"
              >
                <dl
                  className=""
                >
                  <TextListItem
                    component="dt"
                    style={
                      Object {
                        "minWidth": 220,
                      }
                    }
                  >
                    <dt
                      className=""
                      style={
                        Object {
                          "minWidth": 220,
                        }
                      }
                    >
                      Name
                    </dt>
                  </TextListItem>
                  <TextListItem
                    component="dd"
                  >
                    <dd
                      className=""
                    >
                      test-name
                    </dd>
                  </TextListItem>
                  <TextListItem
                    component="dt"
                    style={
                      Object {
                        "minWidth": 220,
                      }
                    }
                  >
                    <dt
                      className=""
                      style={
                        Object {
                          "minWidth": 220,
                        }
                      }
                    >
                      Description
                    </dt>
                  </TextListItem>
                  <TextListItem
                    component="dd"
                  >
                    <dd
                      className=""
                    >
                      test-description
                    </dd>
                  </TextListItem>
                </dl>
              </TextList>
            </div>
          </TextContent>
        </div>
      </StackItem>
      <StackItem>
        <div
          className="pf-l-stack__item"
        >
          <TextContent>
            <div
              className="pf-c-content"
            >
              <Text
                className="pf-u-mt-md pf-u-mb-sm"
                component="h2"
              >
                <h2
                  className="pf-u-mt-md pf-u-mb-sm"
                  data-ouia-component-id="OUIA-Generated-Text-4"
                  data-ouia-component-type="PF4/Text"
                  data-ouia-safe={true}
                  data-pf-content={true}
                >
                  Applied to systems
                </h2>
              </Text>
              <TextList
                component="dl"
              >
                <dl
                  className=""
                >
                  <TextListItem
                    component="dt"
                    style={
                      Object {
                        "minWidth": 220,
                      }
                    }
                  >
                    <dt
                      className=""
                      style={
                        Object {
                          "minWidth": 220,
                        }
                      }
                    >
                      Systems
                    </dt>
                  </TextListItem>
                  <TextListItem
                    component="dd"
                  >
                    <dd
                      className=""
                    >
                       2 systems 
                    </dd>
                  </TextListItem>
                </dl>
              </TextList>
            </div>
          </TextContent>
        </div>
      </StackItem>
    </div>
  </Stack>
</ReviewPatchSet>
`;

exports[`ReviewPatchSet.js Should display available configuration fields only 1`] = `
<ReviewPatchSet>
  <Stack
    hasGutter={true}
  >
    <div
      className="pf-l-stack pf-m-gutter"
    >
      <StackItem>
        <div
          className="pf-l-stack__item"
        >
          <TextContent
            style={
              Object {
                "marginTop": "-15px",
              }
            }
          >
            <div
              className="pf-c-content"
              style={
                Object {
                  "marginTop": "-15px",
                }
              }
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-ouia-component-id="OUIA-Generated-Text-5"
                  data-ouia-component-type="PF4/Text"
                  data-ouia-safe={true}
                  data-pf-content={true}
                >
                  Review the information and click 
                  <b
                    key=".1"
                  >
                    Finish
                  </b>
                   to create a template.
                </p>
              </Text>
            </div>
          </TextContent>
        </div>
      </StackItem>
      <StackItem>
        <div
          className="pf-l-stack__item"
        >
          <TextContent>
            <div
              className="pf-c-content"
            >
              <Text
                className="pf-u-mt-md pf-u-mb-sm"
                component="h2"
              >
                <h2
                  className="pf-u-mt-md pf-u-mb-sm"
                  data-ouia-component-id="OUIA-Generated-Text-6"
                  data-ouia-component-type="PF4/Text"
                  data-ouia-safe={true}
                  data-pf-content={true}
                >
                  Template content
                </h2>
              </Text>
              <TextList
                component="dl"
              >
                <dl
                  className=""
                >
                  <TextListItem
                    component="dt"
                    style={
                      Object {
                        "minWidth": 220,
                      }
                    }
                  >
                    <dt
                      className=""
                      style={
                        Object {
                          "minWidth": 220,
                        }
                      }
                    >
                      Red Hat advisories up to date
                    </dt>
                  </TextListItem>
                  <TextListItem
                    component="dd"
                  >
                    <dd
                      className=""
                    >
                      N/A
                    </dd>
                  </TextListItem>
                </dl>
              </TextList>
            </div>
          </TextContent>
        </div>
      </StackItem>
      <StackItem>
        <div
          className="pf-l-stack__item"
        >
          <TextContent>
            <div
              className="pf-c-content"
            >
              <Text
                className="pf-u-mt-md pf-u-mb-sm"
                component="h2"
              >
                <h2
                  className="pf-u-mt-md pf-u-mb-sm"
                  data-ouia-component-id="OUIA-Generated-Text-7"
                  data-ouia-component-type="PF4/Text"
                  data-ouia-safe={true}
                  data-pf-content={true}
                >
                  Template details
                </h2>
              </Text>
              <TextList
                component="dl"
              >
                <dl
                  className=""
                >
                  <TextListItem
                    component="dt"
                    style={
                      Object {
                        "minWidth": 220,
                      }
                    }
                  >
                    <dt
                      className=""
                      style={
                        Object {
                          "minWidth": 220,
                        }
                      }
                    >
                      Name
                    </dt>
                  </TextListItem>
                  <TextListItem
                    component="dd"
                  >
                    <dd
                      className=""
                    >
                      test-name
                    </dd>
                  </TextListItem>
                  <TextListItem
                    component="dt"
                    style={
                      Object {
                        "minWidth": 220,
                      }
                    }
                  >
                    <dt
                      className=""
                      style={
                        Object {
                          "minWidth": 220,
                        }
                      }
                    >
                      Description
                    </dt>
                  </TextListItem>
                  <TextListItem
                    component="dd"
                  >
                    <dd
                      className=""
                    >
                      No description available
                    </dd>
                  </TextListItem>
                </dl>
              </TextList>
            </div>
          </TextContent>
        </div>
      </StackItem>
      <StackItem>
        <div
          className="pf-l-stack__item"
        >
          <TextContent>
            <div
              className="pf-c-content"
            >
              <Text
                className="pf-u-mt-md pf-u-mb-sm"
                component="h2"
              >
                <h2
                  className="pf-u-mt-md pf-u-mb-sm"
                  data-ouia-component-id="OUIA-Generated-Text-8"
                  data-ouia-component-type="PF4/Text"
                  data-ouia-safe={true}
                  data-pf-content={true}
                >
                  Applied to systems
                </h2>
              </Text>
              <TextList
                component="dl"
              >
                <dl
                  className=""
                >
                  <TextListItem
                    component="dt"
                    style={
                      Object {
                        "minWidth": 220,
                      }
                    }
                  >
                    <dt
                      className=""
                      style={
                        Object {
                          "minWidth": 220,
                        }
                      }
                    >
                      Systems
                    </dt>
                  </TextListItem>
                  <TextListItem
                    component="dd"
                  >
                    <dd
                      className=""
                    >
                       2 systems 
                    </dd>
                  </TextListItem>
                </dl>
              </TextList>
            </div>
          </TextContent>
        </div>
      </StackItem>
    </div>
  </Stack>
</ReviewPatchSet>
`;
